Show most recent 2 posts on start page.

--- a/content/en/index.md.erb
+++ b/content/en/index.md.erb
@@ -2,12 +2,6 @@ Welcome to the _Secretchronicles_ homepage. We have not yet decided on
 the final name of the game yet, so please take this with a grain of
 salt.
 
-_Secret X. Chronicles_ is a fork of the [SMC](http://secretmaryo.org)
-project, whose development has stalled. Note however that our goals
-are different from those of the original SMC project, most notably we
-are working towards our own type of game rather than being solely
-inspired by one specific existing game.
-
 We are in the process of creating our first release, so please help by
 beta-testing it!
 
@@ -22,7 +16,25 @@ scripting engine that utilises [mruby](http://mruby.org), a minimal
 implementation of the [Ruby programming
 language](https://www.ruby-lang.org).
 
+_Secret X. Chronicles_ is a fork of the [SMC](http://secretmaryo.org)
+project, whose development has stalled. Note however that our goals
+are different from those of the original SMC project, most notably we
+are working towards our own type of game rather than being solely
+inspired by one specific existing game.
+
 How to get it?
 --------------
 
 Head over to the [Downloads](/en/download.html) page.
+
+News
+----
+
+<% items.select{|item| item.identifier =~ %r{^/en/news}}.sort_by{|item| item[:date]}.first(2).each do |item| %>
+  <div class="post-snippet">
+    <h3><a href="<%= item.path %>"><%= item[:title] %></a> <span class="snippet-date">(<%= item[:date].strftime("%Y-%m-%d") %>)</span></h3>
+    <p><%= item.compiled_content %></p>
+  </div>
+<% end %>
+
+<p class="more"><a href="/en/news">More…</a></p>
