Always use index.html for consistency

--- a/layouts/default_en.erb
+++ b/layouts/default_en.erb
@@ -19,7 +19,7 @@
       <ul>
 	<li><a href="/en">Home<a></li>
 	<li><a href="/en/news">News<a></li>
-	<li><a href="/en/download.html">Download</a></li>
+	<li><a href="/en/download">Download</a></li>
 	<li><a href="http://docs.secretchronicles.de">Documentation</a></li>
 	<li><a href="http://forum.secretchronicles.de">Forum</a></li>
 	<li><a href="http://wiki.secretchronicles.de">Wiki</a></li>
