--- a/content/en/index.md.erb
+++ b/content/en/index.md.erb
@@ -25,7 +25,7 @@ inspired by one specific existing game.
 How to get it?
 --------------
 
-Head over to the [Downloads](/en/download.html) page.
+Head over to the [Downloads](/en/download) page.
 
 News
 ----
