Add sponsor image link

--- a/layouts/default_en.erb
+++ b/layouts/default_en.erb
@@ -39,7 +39,7 @@
       </p>
       <p id="sponsor">
 	Hosting sponsored by:<br/>
-	FIRST ROOT
+	<a href="http://www.first-root.com"><img src="/assets/first-root.png" alt="First Root"/></a>
       </p>
     </div>
   </body>
