--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -120,3 +120,10 @@ h3 {
     text-align: right;
     font-style: italic;
 }
+
+.post-info {
+    color: gray;
+    font-style: italic;
+    text-align: center;
+    font-size: 10pt;
+}
