Fix some invalid HTML

--- a/layouts/_head.erb
+++ b/layouts/_head.erb
@@ -3,8 +3,8 @@
 </div>
 <div id="navi">
   <ul>
-	<li><a href="/en">Home<a></li>
-	<li><a href="/en/news">News<a></li>
+	<li><a href="/en">Home</a></li>
+	<li><a href="/en/news">News</a></li>
 	<li><a href="/en/download">Download</a></li>
 	<li><a href="http://docs.secretchronicles.de">Documentation</a></li>
 	<li><a href="http://forum.secretchronicles.de">Forum</a></li>
