--- a/layouts/_head.erb
+++ b/layouts/_head.erb
@@ -2,7 +2,11 @@
   Secret X. Chronicles
 </div>
 <div id="navi">
-  <ul>
+  <ul id="language-selector">
+    <li><a href="/en"><img src="/assets/flags/en.png" alt="en"/></a></li>
+    <li><a href="/de"><img src="/assets/flags/de.png" alt="de"/></a></li>
+  </ul>
+  <ul id="links">
 	<li><a href="/en">Home</a></li>
 	<li><a href="/en/news">News</a></li>
 	<li><a href="/en/download">Download</a></li>
