--- a/layouts/blogpost_en.erb
+++ b/layouts/blogpost_en.erb
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title><%= @item[:title] %> | Secret M. Chronicles Blog</title>
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="/stylesheets/coderay.css"/>
+    <link rel="stylesheet" href="/stylesheets/main.css"/>
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
