--- a/layouts/default_en.erb
+++ b/layouts/default_en.erb
@@ -8,7 +8,8 @@
       <% end %>
       Secret M. Chronicles
     </title>
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="/stylesheets/coderay.css"/>
+    <link rel="stylesheet" href="/stylesheets/main.css"/>
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
