--- a/layouts/blogpost_en.erb
+++ b/layouts/blogpost_en.erb
@@ -5,6 +5,7 @@
     <title><%= @item[:title] %> | Secret M. Chronicles Blog</title>
     <link rel="stylesheet" href="/stylesheets/coderay.css"/>
     <link rel="stylesheet" href="/stylesheets/main.css"/>
+    <link rel="alternate" type="application/atom+xml" title="Feed" href="/en/feed.atom"/>
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
