--- a/layouts/default_en.erb
+++ b/layouts/default_en.erb
@@ -10,6 +10,7 @@
     </title>
     <link rel="stylesheet" href="/stylesheets/coderay.css"/>
     <link rel="stylesheet" href="/stylesheets/main.css"/>
+    <link rel="alternate" type="application/atom+xml" title="Feed" href="/en/feed.atom"/>
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
