Name it 'Secretchronicles' for now

--- a/content/en/index.md.erb
+++ b/content/en/index.md.erb
@@ -16,7 +16,7 @@ scripting engine that utilises [mruby](http://mruby.org), a minimal
 implementation of the [Ruby programming
 language](https://www.ruby-lang.org).
 
-_Secret X. Chronicles_ is a fork of the [SMC](http://secretmaryo.org)
+_Secretchronicles_ is a fork of the [SMC](http://secretmaryo.org)
 project, whose development has stalled. Note however that our goals
 are different from those of the original SMC project, most notably we
 are working towards our own type of game rather than being solely
