--- a/layouts/blogpost_en.erb
+++ b/layouts/blogpost_en.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title><%= @item[:title] %> | Secret M. Chronicles Blog</title>
+    <title><%= @item[:title] %> | Secretchronicles Blog</title>
     <link rel="stylesheet" href="/stylesheets/coderay.css"/>
     <link rel="stylesheet" href="/stylesheets/main.css"/>
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/en/feed.atom"/>
