--- a/layouts/default_de.erb
+++ b/layouts/default_de.erb
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8">
-    <title><%= @item[:title] %> | Secret M. Chronicles</title>
+    <title><%= @item[:title] %> | Secretchronicles</title>
     <link rel="stylesheet" href="/style.css"/>
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
