--- a/layouts/default_en.erb
+++ b/layouts/default_en.erb
@@ -6,7 +6,7 @@
       <% if @item[:title] %>
 	<%= @item[:title] %> |
       <% end %>
-      Secret M. Chronicles
+      Secretchronicles
     </title>
     <link rel="stylesheet" href="/stylesheets/coderay.css"/>
     <link rel="stylesheet" href="/stylesheets/main.css"/>
