Make header translatable

--- a/layouts/blogpost_en.erb
+++ b/layouts/blogpost_en.erb
@@ -9,7 +9,7 @@
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
-    <%= render "_head" %>
+    <%= render "_head_en" %>
 
     <div id="main">
       <h1><%= @item[:title] %></h1>
