--- a/layouts/default_en.erb
+++ b/layouts/default_en.erb
@@ -14,7 +14,7 @@
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
-    <%= render "_head" %>
+    <%= render "_head_en" %>
 
     <div id="main">
       <% if @item[:title] %>
