Translate to German

--- a/content/en/index.md.erb
+++ b/content/en/index.md.erb
@@ -8,13 +8,13 @@ beta-testing it!
 What is it?
 -----------
 
-SXC is a two-dimensional sidecrolling platform game based on
+_Secretchronicles_ is a two-dimensional sidecrolling platform game based on
 [OpenGL](http://www.opengl.org) and [SDL](http://www.sdl.org). The
 game features a rich set of levels plus an advanced level editor that
 allows you to create your own levels. It is accompanied by a powerful
-scripting engine that utilises [mruby](http://mruby.org), a minimal
-implementation of the [Ruby programming
-language](https://www.ruby-lang.org).
+scripting engine that utilises
+[mruby](https://github.com/mruby/mruby), a minimal implementation of
+the [Ruby programming language](https://www.ruby-lang.org).
 
 _Secretchronicles_ is a fork of the [SMC](http://secretmaryo.org)
 project, whose development has stalled. Note however that our goals
