--- a/content/stylesheets/main.css
+++ b/content/stylesheets/main.css
@@ -44,6 +44,7 @@ pre {
     -moz-hyphens: none;
     -webkit-hyphens: none;
     hyphens: none;
+    overflow-x: auto;
 }
 
 div.CodeRay div.code pre {
