--- a/content/de/index.md.erb
+++ b/content/de/index.md.erb
@@ -1,23 +1,21 @@
-Willkommen auf der _Secretchronicles_-Website. Wir haben uns noch
-nicht für einen endgültigen Namen entschieden, daher stellen Sie sich
-auf Änderungen ein.
-
-Wir befinden uns in der Phase vor unserer ersten Veröffentlichung,
-helfen Sie bitte beim Beta-Testen!
+Willkommen auf der Website zu „The Secret Chronicles of Dr. M.“. Wir
+befinden uns in der Phase vor unserer ersten Veröffentlichung, helfen
+Sie bitte beim Beta-Testen!
 
 Was es ist
 ----------
 
-Secretchronicles ist ein zweidimensionaler Sidescrolling-Plattformer,
-der auf [OpenGL](http://www.opengl.org) und [SDL](http://www.sdl.org)
-basiert. Das Spiel enthält zahlreiche Level sowie einen
-leistungsfähigen Level-Editor, der es Ihnen erlaubt, eigene Level zu
-erstellen. Zudem enthält es eine mächtige Skript-Engine auf der Basis
-von [mruby](https://github.com/mruby/mruby), einer minimalen
+_The Secret Chronicles of Dr. M._ (_TSC_) ist ein zweidimensionaler
+Sidescrolling-Plattformer, der auf [OpenGL](http://www.opengl.org) und
+[SDL](http://www.sdl.org) basiert. Das Spiel enthält zahlreiche Level
+sowie einen leistungsfähigen Level-Editor, der es Ihnen erlaubt,
+eigene Level zu erstellen. Zudem enthält es eine mächtige
+Skript-Engine auf der Basis von
+[mruby](https://github.com/mruby/mruby), einer minimalen
 Implementation der [Programmiersprache
 Ruby](https://www.ruby-lang.org).
 
-_Secretchronicles_ ist ein Fork (Abspaltung) des
+TSC ist ein Fork (Abspaltung) des
 [SMC-Projekts](http://secretmaryo.org), dessen Entwicklung nurmehr
 stillsteht. Beachten Sie, dass sich unsere Ziele von denjenigen des
 ursprünglichen SMC-Projekts unterscheiden, insbesondere arbeiten wir
