--- a/content/en/index.md.erb
+++ b/content/en/index.md.erb
@@ -1,22 +1,19 @@
-Welcome to the _Secretchronicles_ homepage. We have not yet decided on
-the final name of the game yet, so please take this with a grain of
-salt.
-
-We are in the process of creating our first release, so please help by
+Welcome to the homepage of “The Secret Chronicles of Dr. M.”. We are
+in the process of creating our first release, so please help by
 beta-testing it!
 
 What is it?
 -----------
 
-_Secretchronicles_ is a two-dimensional sidecrolling platform game based on
-[OpenGL](http://www.opengl.org) and [SDL](http://www.sdl.org). The
-game features a rich set of levels plus an advanced level editor that
-allows you to create your own levels. It is accompanied by a powerful
-scripting engine that utilises
+_The Secret Chronicles of Dr. M._ (_TSC_) is a two-dimensional
+sidecrolling platform game based on [OpenGL](http://www.opengl.org)
+and [SDL](http://www.sdl.org). The game features a rich set of levels
+plus an advanced level editor that allows you to create your own
+levels. It is accompanied by a powerful scripting engine that utilises
 [mruby](https://github.com/mruby/mruby), a minimal implementation of
 the [Ruby programming language](https://www.ruby-lang.org).
 
-_Secretchronicles_ is a fork of the [SMC](http://secretmaryo.org)
+TSC is a fork of the [SMC](http://secretmaryo.org)
 project, whose development has stalled. Note however that our goals
 are different from those of the original SMC project, most notably we
 are working towards our own type of game rather than being solely
