Finnish translation of website.

--- a/layouts/_head_de.erb
+++ b/layouts/_head_de.erb
@@ -5,6 +5,7 @@
   <ul id="language-selector">
     <li><a href="/en"><img src="/assets/flags/en.png" alt="en"/></a></li>
     <li><a href="/de"><img src="/assets/flags/de.png" alt="de"/></a></li>
+    <li><a href="/fi"><img src="/assets/flags/fi.png" alt="fi"/></a></li>
   </ul>
   <ul id="links">
     <li><a href="/de">Startseite</a></li>
