--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -8,12 +8,12 @@
     <li><a href="/fi"><img src="/assets/flags/fi.png" alt="fi"/></a></li>
   </ul>
   <ul id="links">
-    <li><a href="/en">Home</a></li>
-    <li><a href="/en/news">News</a></li>
-    <li><a href="/en/download">Download</a></li>
-    <li><a href="http://docs.secretchronicles.de">Documentation</a></li>
-    <li><a href="http://forum.secretchronicles.de">Forum</a></li>
+    <li><a href="/fi">Etusivu</a></li>
+    <li><a href="/fi/news">Uutiset</a></li>
+    <li><a href="/fi/download">Lataukset</a></li>
+    <li><a href="http://docs.secretchronicles.de">Dokumentaatio</a></li>
+    <li><a href="http://forum.secretchronicles.de">Foorumi</a></li>
     <li><a href="http://wiki.secretchronicles.de">Wiki</a></li>
-    <li><a href="https://github.com/Secretchronicles/SMC/issues">Bugtracker</a></li>
+    <li><a href="https://github.com/Secretchronicles/SMC/issues">Bugiseuranta</a></li>
   </ul>
 </div>
