--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -3,8 +3,12 @@
 </div>
 <div id="navi">
   <ul id="language-selector">
+<!--
     <li><a href="/en"><img src="/assets/flags/en.png" alt="en"/></a></li>
     <li><a href="/fi"><img src="/assets/flags/fi.png" alt="fi"/></a></li>
+-->
+    <li><a href="/en">In English</a></li>
+    <li><a href="/fi">Suomeksi</a></li>
   </ul>
   <ul id="links">
     <li><a href="/fi">Etusivu</a></li>
