Initial commit of newsite2015-06. Fixed mruby website link.

--- a/content/en/index.md.erb
+++ b/content/en/index.md.erb
@@ -1,3 +1,5 @@
+<%= render "_screenshots_3_home_en" %>
+
 Welcome to the homepage of “The Secret Chronicles of Dr. M.”. We are
 in the process of creating our first release, so please help by
 beta-testing it!
@@ -10,7 +12,7 @@ sidecrolling platform game based on [OpenGL](http://www.opengl.org)
 and [SDL](http://www.sdl.org). The game features a rich set of levels
 plus an advanced level editor that allows you to create your own
 levels. It is accompanied by a powerful scripting engine that utilises
-[mruby](https://github.com/mruby/mruby), a minimal implementation of
+[mruby](http://www.mruby.org), a minimal implementation of
 the [Ruby programming language](https://www.ruby-lang.org).
 
 TSC is a fork of the [SMC](http://secretmaryo.org)
@@ -31,4 +33,4 @@ News
   <%= render "_listpost", :item => item %>
 <% end %>
 
-<p class="more"><a href="/en/news">More…</a></p>
+<p class="more"><a href="../../en/news">More…</a></p>
