--- a/content/fi/index.md.erb
+++ b/content/fi/index.md.erb
@@ -1,3 +1,5 @@
+<%= render "_screenshots_3_home_fi" %>
+
 Tervetuloa “The Secret Chronicles of Dr. M.” kotisivuille.
 Teemme parhaillaan ensimmäistä julkaisuamme, joten ole hyvä ja auta 
 beta-testaamalla sitä!
@@ -10,7 +12,7 @@ _The Secret Chronicles of Dr. M._ (_TSC_) on kaksiuloitteinen sivullevierivä ta
 Pelissä on runsas valikoima tasoja sekä kehittynyt tasoeditori jolla 
 voit itse tehdä omia tasoja. Sen mukana on tehokas 
 skriptausmoottori joka käyttää
-[mruby](https://github.com/mruby/mruby)ä, joka on minimaalinen versio 
+[mruby](http://www.mruby.org)ä, joka on minimaalinen versio 
 [Ruby ohjelmointikielestä](https://www.ruby-lang.org).
 
 _TSC_ on uusi kehityshaara [SMC](http://secretmaryo.org) 
