--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -1,22 +1,27 @@
 <div id="header">
-  The Secret Chronicles of Dr. M.
+  <h1><a href="/en"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles"></a></h1>
 </div>
-<div id="navi">
-  <ul id="language-selector">
-<!--
-    <li><a href="/en"><img src="/assets/flags/en.png" alt="en"/></a></li>
-    <li><a href="/fi"><img src="/assets/flags/fi.png" alt="fi"/></a></li>
--->
-    <li><a href="/en">In English</a></li>
-    <li><a href="/fi">Suomeksi</a></li>    
-  </ul>
-  <ul id="links">
-    <li><a href="/en">Home</a></li>
-    <li><a href="/en/news">News</a></li>
-    <li><a href="/en/download">Download</a></li>
-    <li><a href="http://docs.secretchronicles.de">Documentation</a></li>
-    <li><a href="http://forum.secretchronicles.de">Forum</a></li>
-    <li><a href="http://wiki.secretchronicles.de">Wiki</a></li>
-    <li><a href="https://github.com/Secretchronicles/TSC/issues">Bugtracker</a></li>
-  </ul>
-</div>
+<ul id="navbar">
+  <li> <a href="/en">Home</a></li>
+  <li> <a href="/en/screenshots">Screenshots</a></li>
+  <li> <a href="/en/news">News</a></li>
+  <li> <a href="/en/download">Download</a></li>
+  <li> <a href="https://github.com/Secretchronicles/TSC">Github</a></li>
+  <li> <a href="https://github.com/Secretchronicles/TSC/issues/">Bugs</a></li>
+  <li> <a href="http://forum.secretchronicles.de/forums">Forum</a> </li>
+  <li> <a href="http://wiki.secretchronicles.de/">Wiki</a></li>
+  <li> <a href="http://docs.secretchronicles.de/">Documentation</a></li>
+  <li>Community
+    <ul>
+      <li> <a href="http://chatlogs.secretchronicles.de/">IRC Chatlogs</a></li>
+      <li> <a href="http://lists.secretchronicles.de/"> ML Archives</a></li>
+    </ul>
+  </li>
+  <li>Language
+    <ul>
+      <li> <a href="/fi"><img class="language" alt="Finnish" src="/assets/flags/fi.png"> Finnish</a></li>
+      <li> <a href="/en"><img class="language" alt="English" src="/assets/flags/en.png"> English</a></li>
+    </ul>
+</ul>
+
+
