--- a/layouts/blogpost_en.erb
+++ b/layouts/blogpost_en.erb
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title><%= @item[:title] %> | Secretchronicles Blog</title>
-    <link rel="stylesheet" href="/stylesheets/coderay.css"/>
-    <link rel="stylesheet" href="/stylesheets/main.css"/>
+    <link rel="stylesheet" href="/stylesheets/default.css"/>
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/en/feed.atom"/>
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
+  <div id="page">
+
     <%= render "_head_en" %>
 
     <div id="main">
@@ -26,6 +27,9 @@
       <%= yield %>
     </div>
 
+  </div>
+
     <%= render "_foot" %>
+
   </body>
 </html>
