--- a/layouts/default_fi.erb
+++ b/layouts/default_fi.erb
@@ -8,12 +8,13 @@
       <% end %>
       Secretchronicles
     </title>
-    <link rel="stylesheet" href="/stylesheets/coderay.css"/>
-    <link rel="stylesheet" href="/stylesheets/main.css"/>
+    <link rel="stylesheet" href="/stylesheets/default.css"/>
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/fi/feed.atom"/>
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
+   <div id="page">
+
     <%= render "_head_fi" %>
 
     <div id="main">
@@ -22,6 +23,8 @@
       <% end %>
       <%= yield %>
     </div>
+
+   </div>
 
     <%= render "_foot" %>
   </body>
