--- a/layouts/_foot.erb
+++ b/layouts/_foot.erb
@@ -1,9 +1,5 @@
 <div id="footer">
-  <p id="copyright">
-	Copyright © <%= Time.now.year %> Secretchronicles Team
-  </p>
-  <p id="sponsor">
-	Hosting sponsored by:<br/>
-	<a href="http://www.first-root.com"><img src="/assets/first-root.png" alt="First Root"/></a>
+  <p>Copyright © <%= Time.now.year %> The Secret Chronicles Team<br>
+	Hosting thanks to <a href="http://www.first-root.com"><img src="/assets/first-root.png" alt="First Root"/></a>
   </p>
 </div>
