--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -1,22 +1,26 @@
 <div id="header">
-  The Secret Chronicles of Dr. M.
+  <h1><a href="/fi"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles"></a></h1>
 </div>
-<div id="navi">
-  <ul id="language-selector">
-<!--
-    <li><a href="/en"><img src="/assets/flags/en.png" alt="en"/></a></li>
-    <li><a href="/fi"><img src="/assets/flags/fi.png" alt="fi"/></a></li>
--->
-    <li><a href="/en">In English</a></li>
-    <li><a href="/fi">Suomeksi</a></li>
-  </ul>
-  <ul id="links">
-    <li><a href="/fi">Etusivu</a></li>
-    <li><a href="/fi/news">Uutiset</a></li>
-    <li><a href="/fi/download">Lataukset</a></li>
-    <li><a href="http://docs.secretchronicles.de">Dokumentaatio</a></li>
-    <li><a href="http://forum.secretchronicles.de">Foorumi</a></li>
-    <li><a href="http://wiki.secretchronicles.de">Wiki</a></li>
-    <li><a href="https://github.com/Secretchronicles/TSC/issues">Bugiseuranta</a></li>
-  </ul>
-</div>
+<ul id="navbar">
+  <li> <a href="/fi">Etusivu</a></li>
+  <li> <a href="/fi/screenshots">Kuvat</a></li>
+  <li> <a href="/fi/news">Uutiset</a></li>
+  <li> <a href="/fi/download">Lataukset</a></li>
+  <li> <a href="https://github.com/Secretchronicles/TSC">Github</a></li>
+  <li> <a href="https://github.com/Secretchronicles/TSC/issues/">Bugit</a></li>
+  <li> <a href="http://forum.secretchronicles.de/forums">Foorumi</a> </li>
+  <li> <a href="http://wiki.secretchronicles.de/">Wiki</a></li>
+  <li> <a href="http://docs.secretchronicles.de/">Dokumentaatio</a></li>
+  <li>Yhteisö
+    <ul>
+      <li> <a href="http://chatlogs.secretchronicles.de/">IRC Chatlogit</a></li>
+      <li> <a href="http://lists.secretchronicles.de/"> Postituslista arkistot</a></li>
+    </ul>
+  </li>
+  <li>Language
+    <ul>
+      <li> <a href="/fi"><img class="language" alt="Finnish" src="/assets/flags/fi.png"> Finnish</a></li>
+      <li> <a href="/en"><img class="language" alt="English" src="/assets/flags/en.png"> English</a></li>
+    </ul>
+</ul>
+
