--- a/layouts/default_en.erb
+++ b/layouts/default_en.erb
@@ -3,26 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>
+      The Secret Chronicles
       <% if @item[:title] %>
-	<%= @item[:title] %> |
+	  | <%= @item[:title] %>
       <% end %>
-      Secretchronicles
     </title>
-    <link rel="stylesheet" href="/stylesheets/coderay.css"/>
-    <link rel="stylesheet" href="/stylesheets/main.css"/>
+    <link rel="stylesheet" href="/stylesheets/default.css"/>
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/en/feed.atom"/>
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
-    <%= render "_head_en" %>
+    <div id="page">
+ 
+      <%= render "_head_en" %>
 
-    <div id="main">
-      <% if @item[:title] %>
-	<h1><%= @item[:title] %></h1>
-      <% end %>
-      <%= yield %>
+      <div id="main">
+        <% if @item[:title] %>
+    	<h1><%= @item[:title] %></h1>
+        <% end %>
+        <%= yield %>
+      </div>
     </div>
 
-    <%= render "_foot" %>
+      <%= render "_foot" %>
+
   </body>
 </html>
