Modify menu, add screenshots. Closes #5 #6 .

--- a/content/en/pages/screenshots.erb
+++ b/content/en/pages/screenshots.erb
@@ -20,6 +20,9 @@ title: Screenshots
 <a href="/assets/screenshots/14.png"><img class="screenshot" alt="Screenshot 14" src="/assets/screenshots/small/14.png" width="250" height="141"></a>
 <a href="/assets/screenshots/15.png"><img class="screenshot" alt="Screenshot 15" src="/assets/screenshots/small/15.png" width="250" height="141"></a>
 <a href="/assets/screenshots/16.png"><img class="screenshot" alt="Screenshot 16" src="/assets/screenshots/small/16.png" width="250" height="141"></a>
+<a href="/assets/screenshots/17.png"><img class="screenshot" alt="Screenshot 17" src="/assets/screenshots/small/17.png" width="250" height="141"></a>
+<a href="/assets/screenshots/18.png"><img class="screenshot" alt="Screenshot 18" src="/assets/screenshots/small/18.png" width="250" height="141"></a>
+<a href="/assets/screenshots/19.png"><img class="screenshot" alt="Screenshot 19" src="/assets/screenshots/small/19.png" width="250" height="141"></a>
 
 </div>
 
