--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -9,19 +9,16 @@
   <li> <a href="https://github.com/Secretchronicles/TSC">Github</a></li>
   <li> <a href="https://github.com/Secretchronicles/TSC/issues/">Bugs</a></li>
   <li> <a href="http://forum.secretchronicles.de/forums">Forum</a> </li>
+  <li> <a href="http://lists.secretchronicles.de/">Mailinglist</a></li>
   <li> <a href="http://wiki.secretchronicles.de/">Wiki</a></li>
-  <li> <a href="http://docs.secretchronicles.de/">Documentation</a></li>
-  <li>Community
-    <ul>
-      <li> <a href="http://chatlogs.secretchronicles.de/">IRC Chatlogs</a></li>
-      <li> <a href="http://lists.secretchronicles.de/"> ML Archives</a></li>
-    </ul>
-  </li>
+  <li> <a href="http://docs.secretchronicles.de/">Docs</a></li>
+  <li> <a href="http://chatlogs.secretchronicles.de/">IRC Logs</a></li>
   <li>Language
     <ul>
-      <li> <a href="/fi"><img class="language" alt="Finnish" src="/assets/flags/fi.png"> Finnish</a></li>
-      <li> <a href="/en"><img class="language" alt="English" src="/assets/flags/en.png"> English</a></li>
+      <li><a href="/fi"><img class="language" alt="Finnish" src="/assets/flags/fi.png"> Finnish</a></li>
+      <li><a href="/en"><img class="language" alt="English" src="/assets/flags/en.png"> English</a></li>
     </ul>
+  </li>
 </ul>
 
 
