--- a/content/stylesheets/default.css
+++ b/content/stylesheets/default.css
@@ -15,7 +15,7 @@ body {
 }
 #main {
 	margin-left: 30px;
-	margin-top: 60px;
+	margin-top: 100px;
 	margin-bottom: 0px;
 	margin-right: 0px;
 	padding: 15px;
@@ -48,11 +48,11 @@ body {
 	display:block;
 	position: absolute;
 	margin: 15px 0 0 0;
-	width: 100px;
+	width: 140px;
 	left: 0;
 }
 #navbar ul li {
-	width: 100px;
+	width: 140px;
 }
 #header {
 	text-align: center;
@@ -86,3 +86,8 @@ aside img {
 	border: 5px solid black;
 	margin: 7px;
 }
+/*
+language img {
+	margin: 7px;
+}
+*/
