--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -5,22 +5,19 @@
   <li> <a href="/fi">Etusivu</a></li>
   <li> <a href="/fi/screenshots">Kuvat</a></li>
   <li> <a href="/fi/news">Uutiset</a></li>
-  <li> <a href="/fi/download">Lataukset</a></li>
+  <li> <a href="/fi/download">Lataa</a></li>
   <li> <a href="https://github.com/Secretchronicles/TSC">Github</a></li>
   <li> <a href="https://github.com/Secretchronicles/TSC/issues/">Bugit</a></li>
   <li> <a href="http://forum.secretchronicles.de/forums">Foorumi</a> </li>
+  <li> <a href="http://lists.secretchronicles.de/">Postituslista</a></li>
   <li> <a href="http://wiki.secretchronicles.de/">Wiki</a></li>
   <li> <a href="http://docs.secretchronicles.de/">Dokumentaatio</a></li>
-  <li>Yhteisö
-    <ul>
-      <li> <a href="http://chatlogs.secretchronicles.de/">IRC Chatlogit</a></li>
-      <li> <a href="http://lists.secretchronicles.de/"> Postituslista arkistot</a></li>
-    </ul>
-  </li>
+  <li> <a href="http://chatlogs.secretchronicles.de/">IRC Logit</a></li>
   <li>Language
     <ul>
-      <li> <a href="/fi"><img class="language" alt="Finnish" src="/assets/flags/fi.png"> Finnish</a></li>
-      <li> <a href="/en"><img class="language" alt="English" src="/assets/flags/en.png"> English</a></li>
+      <li><a href="/fi"><img class="language" alt="Finnish" src="/assets/flags/fi.png"> Finnish</a></li>
+      <li><a href="/en"><img class="language" alt="English" src="/assets/flags/en.png"> English</a></li>
     </ul>
+  </li>
 </ul>
 
