--- a/layouts/default_en.erb
+++ b/layouts/default_en.erb
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
       The Secret Chronicles
       <% if @item[:title] %>
@@ -14,7 +15,7 @@
   </head>
   <body>
     <div id="page">
- 
+
       <%= render "_head_en" %>
 
       <div id="main">
