--- a/layouts/default_fi.erb
+++ b/layouts/default_fi.erb
@@ -2,6 +2,7 @@
 <html lang="fi">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
       <% if @item[:title] %>
 	<%= @item[:title] %> |
