Add meta description tag to frontpage, and change webpage titles to correct game name.

--- a/content/en/index.md.erb
+++ b/content/en/index.md.erb
@@ -1,3 +1,7 @@
+---
+description: The Secret Chronicles of Dr. M. (TSC) is a two-dimensional sidecrolling platform game with level editor.
+---
+
 <%= render "_screenshots_3_home_en" %>
 
 Welcome to the homepage of “The Secret Chronicles of Dr. M.”. We are
