--- a/content/fi/index.md.erb
+++ b/content/fi/index.md.erb
@@ -1,3 +1,7 @@
+---
+description: The Secret Chronicles of Dr. M. (TSC) on kaksiuloitteinen sivullevierivä tasohyppely jossa on myös tasoeditori.
+---
+
 <%= render "_screenshots_3_home_fi" %>
 
 Tervetuloa “The Secret Chronicles of Dr. M.” kotisivuille.
