--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -11,7 +11,7 @@
   <li> <a href="http://forum.secretchronicles.de/forums">Foorumi</a> </li>
   <li> <a href="http://lists.secretchronicles.de/">Postituslista</a></li>
   <li> <a href="http://wiki.secretchronicles.de/">Wiki</a></li>
-  <li> <a href="http://docs.secretchronicles.de/">Dokumentaatio</a></li>
+  <li> <a href="/fi/documentation">Dokumentaatio</a></li>
   <li> <a href="http://chatlogs.secretchronicles.de/">IRC Logit</a></li>
   <li>Language
     <ul>
