Force the cursor to be a pointer in the navbar items

--- a/content/stylesheets/default.css
+++ b/content/stylesheets/default.css
@@ -33,6 +33,7 @@ body {
 	padding: 15px ;
     position: relative;
 	color:white;
+    cursor: pointer;
 }
 #navbar li:hover {
 	background-color: purple;
