--- a/content/stylesheets/default.css
+++ b/content/stylesheets/default.css
@@ -5,7 +5,7 @@ body {
 	height: 100%;
 }
 #page {
-	background-color: #C4A8A8;
+	background-color: #FCFCE9;
 	max-width: 1200px;
 	min-height: 1000px;
 	margin: 0 auto;
