Fix news listing to show correct summaries.

--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -1,5 +1,5 @@
 <div id="header">
-  <h1><a href="/en"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles"></a></h1>
+  <h1><a href="/en"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles"/></a></h1>
 </div>
 <ul id="navbar">
   <a href="/en"><li>Home</li></a>
@@ -15,8 +15,8 @@
   <a href="http://chatlogs.secretchronicles.de/"><li>IRC Logs</li></a>
   <li>Language
     <ul>
-      <a href="/fi"><li><img class="language" alt="Finnish" src="/assets/flags/fi.png"> Finnish</li></a>
-      <a href="/en"><li><img class="language" alt="English" src="/assets/flags/en.png"> English</li></a>
+      <a href="/fi"><li><img class="language" alt="Finnish" src="/assets/flags/fi.png"/> Finnish</li></a>
+      <a href="/en"><li><img class="language" alt="English" src="/assets/flags/en.png"/> English</li></a>
     </ul>
   </li>
 </ul>
