--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -1,5 +1,5 @@
 <div id="header">
-  <h1><a href="/fi"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles"></a></h1>
+  <h1><a href="/fi"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles"/></a></h1>
 </div>
 <ul id="navbar">
   <li> <a href="/fi">Etusivu</a></li>
@@ -15,8 +15,8 @@
   <li> <a href="http://chatlogs.secretchronicles.de/">IRC Logit</a></li>
   <li>Language
     <ul>
-      <li><a href="/fi"><img class="language" alt="Finnish" src="/assets/flags/fi.png"> Finnish</a></li>
-      <li><a href="/en"><img class="language" alt="English" src="/assets/flags/en.png"> English</a></li>
+      <li><a href="/fi"><img class="language" alt="Finnish" src="/assets/flags/fi.png"/> Finnish</a></li>
+      <li><a href="/en"><img class="language" alt="English" src="/assets/flags/en.png"/> English</a></li>
     </ul>
   </li>
 </ul>
